# icu4xgo

./: .gitignore  CMakeLists.txt  CMakelists.txt  Cargo.toml  Makefile  README.md  array_utils.go  cgo_notdarwin.go  collator.c  collator.go  collator_darwin.go  collator_general.go  collator_notdarwin.go  collator_options.go  collator_test.go  date_time.c  date_time.go  date_time_darwin.go  date_time_notdarwin.go  date_time_test.go  diplomat_string.c  go.mod  go.sum  icu4xgo.h  ig_collator.c  ig_collator.h  ig_date_time.c  ig_date_time.h  ig_diplomat_string.c  ig_diplomat_string.h  ig_fixed_decimal_formatter.c  ig_fixed_decimal_formatter.h  ig_list_formatter.c  ig_list_formatter.h  ig_locale.c  ig_locale.h  ig_plural_rules.c  ig_plural_rules.h  ig_segmenter.c  ig_segmenter.h  (+32 more)
.github/workflows/: build-linux.yml  build-macos.yml  build.yml
c/: .gitignore  CMakeLists.txt  CMakelists.txt  icu4xgo.h  icugo.h  ig_locale.h  libicu4xgo.pc  locale.c  locale.h
datetime/: anycalendarkind_string.go  kind.go
icu4x/: LICENSE
